courses/430_programming-languages/assignment-6/tests/error/hw5_error16.nex
fun f(a:int,b:int):none
{
   print (a);
   print (":n");
   print (b);
   print (":n");
}
print "should not get here:n";
1 / 0;

f(1, 2, 3);
